@@ -1,5 +1,5 @@
 <!-- 
-   $Id: gfs-options.xml,v 1.5 2006-04-25 11:25:08 marc Exp $
+   $Id: gfs-options.xml,v 1.6 2006-09-29 13:20:22 adam Exp $
    Options for generic frontend server and yaz-ztest.
    Included in both manual and man page for yaz-ztest
 -->
@@ -152,6 +152,14 @@
    <replaceable>size</replaceable></term>
   <listitem><para>
     Maximum record size/message size, in kilobytes.
+   </para></listitem>
+ </varlistentry>
+
+ <varlistentry><term><literal>-r </literal>
+   <replaceable>size</replaceable></term>
+  <listitem><para>
+    Maximum size of log file before rotation occurs, in kilobytes.
+    Default size is 1048576 k (=1 GB).
    </para></listitem>
  </varlistentry>
 
